--- a/template.yaml
+++ b/template.yaml
@@ -78,17 +78,16 @@ Resources:
           SECURITY_GROUP_ID: !Ref MySecurityGroup
           PROXY_PORT: !Ref Port
       Policies:
-        - PolicyName: ProxyEC2Policy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ec2:DescribeInstances
-                  - ec2:RunInstances
-                  - ec2:CreateTags
-                  - ec2:TerminateInstances
-                Resource: "*"
+        - AWSLambdaBasicExecutionRole
+        - Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - ec2:DescribeInstances
+                - ec2:RunInstances
+                - ec2:CreateTags
+                - ec2:TerminateInstances
+              Resource: "*"
 
   IdleCheckHandler:
     Type: AWS::Serverless::Function
@@ -99,17 +98,16 @@ Resources:
         Variables:
           INSTANCE_TAG: !Ref InstanceTag
       Policies:
-        - PolicyName: IdleEC2Policy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ec2:DescribeInstances
-                  - ec2:TerminateInstances
-                  - cloudwatch:GetMetricStatistics
-                  - cloudwatch:ListMetrics
-                Resource: "*"
+        - AWSLambdaBasicExecutionRole
+        - Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action:
+                - ec2:DescribeInstances
+                - ec2:TerminateInstances
+                - cloudwatch:GetMetricStatistics
+                - cloudwatch:ListMetrics
+              Resource: "*"
       Events:
         IdleCheckSchedule:
           Type: Schedule
@@ -120,4 +118,4 @@ Resources:
 Outputs:
   ProxyApiUrl:
     Description: "API Gateway endpoint URL for proxy GET request"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/proxy?uuid=de40bdf4-2861-45fd-bf9e-a073635cbcc2"
+    Value: !Sub "https://${MyApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/proxy?uuid=de40bdf4-2861-45fd-bf9e-a073635cbcc2"
