--- a/template.yaml
+++ b/template.yaml
@@ -12,7 +12,7 @@ Parameters:
     Description: "启动的 EC2 实例所带的固定 TAG 值"
   AmiId:
     Type: String
-    Default: "ami-05206bf8aecfc7ae6"
+    Default: "ami-0c1638aa346a43fe8"
     Description: "启动新 EC2 实例使用的 AMI ID; https://ap-northeast-1.console.aws.amazon.com/ec2/home?region=ap-northeast-1#AMICatalog:"
   InstanceType:
     Type: String
@@ -69,7 +69,7 @@ Resources:
           Properties:
             RestApiId: !Ref MyApi
             Path: /proxy
-            Method: post
+            Method: get
       Environment:
         Variables:
           INSTANCE_TAG: !Ref InstanceTag
